Add OAuth2 auth flow
